modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-host-network/rendered/test_samples/pods/001-allowed-no-hostnetwork.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-no-hostnetwork
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
