modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-host-network/rendered/test_samples/pods/002-disallowed-no-hostnetwork-multiple-containers.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-no-hostnetwork-multiple-containers
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
              hostPort: 8080
              protocol: TCP
        - image: redis
          name: redis
          ports:
            - containerPort: 6379
              hostPort: 9090
              protocol: TCP
