modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-host-network/rendered/test_samples/pods/005-disallowed-initcontainer-hostport-out-of-range.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-initcontainer-hostport-out-of-range
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    hostNetwork: false
    initContainers:
        - image: busybox
          name: init
          ports:
            - containerPort: 999
              hostPort: 999
              protocol: TCP
