modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-host-network/rendered/test_samples/pods/006-disallowed-ephemeralcontainer-hostport-in-range.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-ephemeralcontainer-hostport-in-range
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    ephemeralContainers:
        - image: busybox
          name: eph
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
    hostNetwork: false
