modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-host-network/rendered/test_samples/pods/007-allowed-hostnetwork-true-port-in-range.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-hostnetwork-true-port-in-range
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 25000
              hostPort: 25000
              protocol: TCP
    hostNetwork: true
