modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-host-network/rendered/test_samples/pods/008-disallowed-hostnetwork-true-container-port.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-hostnetwork-true-container-port
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
    hostNetwork: true
