modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-host-network/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-host-network-ports
tests:
  - name: pss-baseline-functional
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: allowed-no-hostnetwork
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-allowed-no-hostnetwork.yaml
        assertions:
          - violations: "no"
      - name: disallowed-no-hostnetwork-multiple-containers
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-disallowed-no-hostnetwork-multiple-containers.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-hostnetwork-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-disallowed-hostnetwork-true.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-initcontainer-hostport-in-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-disallowed-initcontainer-hostport-in-range.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-initcontainer-hostport-out-of-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-disallowed-initcontainer-hostport-out-of-range.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-ephemeralcontainer-hostport-in-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-disallowed-ephemeralcontainer-hostport-in-range.yaml
        assertions:
          - violations: "yes"
  - name: security-policy-functional
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: allowed-hostnetwork-true-port-in-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/007-allowed-hostnetwork-true-port-in-range.yaml
        assertions:
          - violations: "no"
      - name: disallowed-hostnetwork-true-container-port
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/008-disallowed-hostnetwork-true-container-port.yaml
        assertions:
          - violations: "yes"
      - name: allowed-hostnetwork-false
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/009-allowed-hostnetwork-false.yaml
        assertions:
          - violations: "no"
      - name: disallowed-hostnetwork-true-port-out-of-range-low
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/010-disallowed-hostnetwork-true-port-out-of-range-low.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-hostnetwork-true-container-port-out-of-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/011-disallowed-hostnetwork-true-container-port-out-of-range.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-hostnetwork-true-port-out-of-range-high
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/012-disallowed-hostnetwork-true-port-out-of-range-high.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-hostnetwork-true-port-on-edge-min
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/013-disallowed-hostnetwork-true-port-on-edge-min.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-hostnetwork-true-port-on-edge-max
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/014-disallowed-hostnetwork-true-port-on-edge-max.yaml
        assertions:
          - violations: "yes"
      - name: allowed-hostnetwork-true-init-and-main-ports-in-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/015-allowed-hostnetwork-true-init-and-main-ports-in-range.yaml
        assertions:
          - violations: "no"
      - name: disallowed-hostnetwork-true-init-port-out-of-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/016-disallowed-hostnetwork-true-init-port-out-of-range.yaml
        assertions:
          - violations: "yes"
  - name: security-policy-spe-pod
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: allowed-by-exception-hostnetwork-true-tcp-25000
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-allowed-by-exception-hostnetwork-true-tcp-25000-inv-1.yaml
        object: test_samples/pods/017-allowed-by-exception-hostnetwork-true-tcp-25000.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-hostnetwork-false-empty
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-allowed-by-exception-hostnetwork-false-empty-inv-1.yaml
        object: test_samples/pods/018-allowed-by-exception-hostnetwork-false-empty.yaml
        assertions:
          - violations: "no"
      - name: disallowed-by-exception-hostnetwork-true-container-port
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-disallowed-by-exception-hostnetwork-true-container-port-inv-1.yaml
        object: test_samples/pods/019-disallowed-by-exception-hostnetwork-true-container-port.yaml
        assertions:
          - violations: "yes"
      - name: allowed-by-exception-multiple-ports-tcp
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-disallowed-by-exception-hostnetwork-true-container-port-inv-1.yaml
        object: test_samples/pods/020-allowed-by-exception-multiple-ports-tcp.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-multiple-ports-udp
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-disallowed-by-exception-hostnetwork-true-container-port-inv-1.yaml
        object: test_samples/pods/021-allowed-by-exception-multiple-ports-udp.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-hostport-only-without-hostnetwork
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/006-allowed-by-exception-hostport-only-without-hostnetwork-inv-1.yaml
        object: test_samples/pods/022-allowed-by-exception-hostport-only-without-hostnetwork.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-port-in-constraint-range
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/007-allowed-by-exception-port-in-constraint-range-inv-1.yaml
        object: test_samples/pods/023-allowed-by-exception-port-in-constraint-range.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-port-out-of-constraint-range
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/008-allowed-by-exception-port-out-of-constraint-range-inv-1.yaml
        object: test_samples/pods/024-allowed-by-exception-port-out-of-constraint-range.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-port-on-constraint-edge-min
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/009-allowed-by-exception-port-on-constraint-edge-min-inv-1.yaml
        object: test_samples/pods/025-allowed-by-exception-port-on-constraint-edge-min.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-port-on-constraint-edge-max
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/010-allowed-by-exception-port-on-constraint-edge-max-inv-1.yaml
        object: test_samples/pods/026-allowed-by-exception-port-on-constraint-edge-max.yaml
        assertions:
          - violations: "no"
      - name: disallowed-by-exception-hostnetwork-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/011-disallowed-by-exception-hostnetwork-mismatch-inv-1.yaml
        object: test_samples/pods/027-disallowed-by-exception-hostnetwork-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-by-exception-hostport-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/011-disallowed-by-exception-hostnetwork-mismatch-inv-1.yaml
        object: test_samples/pods/028-disallowed-by-exception-hostport-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-by-exception-protocol-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/011-disallowed-by-exception-hostnetwork-mismatch-inv-1.yaml
        object: test_samples/pods/029-disallowed-by-exception-protocol-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-no-exception-label
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/030-disallowed-no-exception-label.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-exception-allows-false-but-pod-has-true
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/014-disallowed-exception-allows-false-but-pod-has-true-inv-1.yaml
        object: test_samples/pods/031-disallowed-exception-allows-false-but-pod-has-true.yaml
        assertions:
          - violations: "yes"
      - name: allowed-by-exception-hostnetwork-false-with-hostport
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/014-disallowed-exception-allows-false-but-pod-has-true-inv-1.yaml
        object: test_samples/pods/032-allowed-by-exception-hostnetwork-false-with-hostport.yaml
        assertions:
          - violations: "no"
      - name: disallowed-exception-allows-false-constraint-allows-true
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-allowed-by-exception-hostnetwork-false-empty-inv-1.yaml
        object: test_samples/pods/033-disallowed-exception-allows-false-constraint-allows-true.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-exception-allows-false-constraint-allows-true-pod-uses-true
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-allowed-by-exception-hostnetwork-false-empty-inv-1.yaml
        object: test_samples/pods/034-disallowed-exception-allows-false-constraint-allows-true-pod-uses-true.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-no-exception-port-out-of-constraint-range
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/035-disallowed-no-exception-port-out-of-constraint-range.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-no-exception-container-port
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/036-disallowed-no-exception-container-port.yaml
        assertions:
          - violations: "yes"
      - name: allowed-by-exception-port-exactly-min-constraint-range
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/009-allowed-by-exception-port-on-constraint-edge-min-inv-1.yaml
        object: test_samples/pods/037-allowed-by-exception-port-exactly-min-constraint-range.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-port-exactly-max-constraint-range
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/010-allowed-by-exception-port-on-constraint-edge-max-inv-1.yaml
        object: test_samples/pods/038-allowed-by-exception-port-exactly-max-constraint-range.yaml
        assertions:
          - violations: "no"
      - name: allowed-exception-container-port
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/020-allowed-exception-container-port-inv-1.yaml
        object: test_samples/pods/039-allowed-exception-container-port.yaml
        assertions:
          - violations: "no"
      - name: disallowed-exception-container-port
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/020-allowed-exception-container-port-inv-1.yaml
        object: test_samples/pods/040-disallowed-exception-container-port.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-by-exception-empty-spec
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/022-disallowed-by-exception-empty-spec-inv-1.yaml
        object: test_samples/pods/041-disallowed-by-exception-empty-spec.yaml
        assertions:
          - violations: "yes"
